--- a/FeedApi/appsettings.json
+++ b/FeedApi/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FeedApiDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "JwtSettings": {
+    "Secret": "d#squawPWZfy=628LA*T3fZTQvyu@mrLdqVh6MPC!aYGzuBY^HfJ@Z$t#^qS^DJtH*S8Jv3VB=T^zkEVhb4-m$3k3LSB_9Vby=Nec$%CK4@9rg#gf%eTMfVgXY!3N^CVy8MCbTjYwdtwBVk96&-=be2#QY-9Jym@23xsWPP6jn9bRSgWzy_xJuvwRgXejT8bKqJsE+x2#?AvZdGFgr-wX6ZKuaxWU2tspfmNaM?V4N5XYCPPb?=wT5!8Qd+GufX4"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
